Fix hover on shortlink causes URLs list to spill out of container
Fixes: #34

--- a/src/reset.css
+++ b/src/reset.css
@@ -29,4 +29,5 @@
   line-height: 1.5;
   text-decoration: none;
   list-style: none;
+  font-family: "Iosevka Term", "Inter", "Fira Code", monospace;
 }
